--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <p>Um dia desses, enquanto mexia num livro da biblioteca da escola, achei uma carta antiga falando de uma cidade perdida cheia de riquezas e belezas naturais. A autora deixou umas pistas pra encontrar essa cidade — e eu decidi seguir todas elas!</p>
+            <button class="btn-proximo" data-proximo="1">Peabiru</button>
+            <button class="btn-proximo" data-proximo="2">Araruna</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+            <p>Você começa a aventura no Peabiru, subindo o Riacho do Saltin bem cedinho, quando o sol tá nascendo, pra achar a primeira dica.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar a no Riacho do Saltin</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
+            <p>Em Araruna, você dá um pulo na cidade histórica de Olinda. Na carta, uma das dicas diz que, pra achar a entrada da cidade perdida, você precisa procurar a próxima pista em algum ponto turístico de lá. Por qual você começa?</p>
             <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <button class="btn-proximo" data-proximo="6">Explorar as praças próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>No topo do Riacho do Saltin, você encontra uma antiga inscrição apontando que a próxima pista está
+                localizada no Belem do pará.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Belem do pará</button>
         </div>
 
         <div class="passo" id="passo-4">
@@ -41,24 +41,24 @@
 
         <div class="passo" id="passo-5">
             <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
+                pista está no Belem do pará.</p>
             <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <p>Explorando as praças, você encontra uma passagem escondida atras da estaua central, mas ela leva a um beco sem saída.</p>
             <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <p>No Belem do pará, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Belem do pará!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Belem do prá</button>
         </div>
 
         <div class="passo" id="passo-9">
